# orion

./: .editorconfig  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
migrations/2023-04-09-015012_create_sessions/: down.sql  up.sql
migrations/2023-04-09-015124_create_messages/: up.sql
migrations/2023-04-23-145254_create_asssistants/: down.sql  up.sql
src/: App.vue  main.ts  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  models.rs  notification.rs  open_ai.rs  schema.rs  settings.rs
src-tauri/src/commands/: ask_command.rs  assistant_commands.rs  message_commands.rs  mod.rs  session_commands.rs  settings_commands.rs
src-tauri/src/models/: assistant.rs  message.rs  mod.rs  session.rs
src-tauri/src/services/: assistants_service.rs  messages_service.rs  mod.rs  sessions_service.rs
src/components/: Notification.vue  PageHeader.vue  TitleBar.vue  types.d.ts
src/components/chat/: ChatMessages.vue  DeleteSessionDialog.vue  MessageTextarea.vue  Sidebar.vue
src/components/form/: SelectInput.vue  TextInput.vue  TextareaInput.vue
src/components/icons/: SpinnerIcon.vue  TrashIcon.vue
src/components/icons/notifications/: ErrorIcon.vue  InfoIcon.vue  SuccessIcon.vue  WarningIcon.vue
src/pages/: AssistantsPage.vue  ChatPage.vue  CreateAssistantPage.vue  EditAssistantPage.vue  SettingsPage.vue
src/stores/: currentAssistant.ts  currentSession.ts
